# autoAtendance

./: .gitignore  .replit  README.md  SECURITY.md  Ver  cfgs.ini  check.py  classes.json  files.json  gs.py  main.py  pyproject.toml  report.py  requirements.txt  sync.py  usrs.json  vercheck.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
